--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "tabletop": "^1.6.2",
     "typescript": "^3.8.3"
   },
